app/assets/stylesheets/base.css.scss
$map-width: 600px;
$map-height: 400px;
$bg-color-dark: #660000;
$bg-color-light: #cc3300;
$default-font-color: #ffffff;
$accent-color: #ffcc66;
$accent-color-light: #ffcc33;
$gray: #999;
$btn-bg-color: #2C2C2C;
$btn-color-dark: #333;
$btn-color-light: #222;
$logo-height: 54px;

body {
  background-color: $bg-color-dark;
  background-image: radial-gradient(50% 50%, circle closest-corner, $bg-color-light, $bg-color-dark 70%);
  background-image: -o-radial-gradient(50% 50%, circle closest-corner, $bg-color-light, $bg-color-dark 70%);
  background-image: -moz-radial-gradient(50% 50%, circle closest-corner, $bg-color-light, $bg-color-dark 70%);
  background-image: -webkit-radial-gradient(50% 50%, circle closest-corner, $bg-color-light, $bg-color-dark 70%);
  background-image: -ms-radial-gradient(50% 50%, circle closest-corner, $bg-color-light, $bg-color-dark 70%);

  font-size: 13px;
  color: $default-font-color;
}

.cap {
  text-transform: UPPERCASE;
}

h1, h2, h3, h4, h5, h6, label {
  color: $default-font-color;
}

input, textarea, select, .uneditable-input {
  height: auto;
}

table {
  font-size: 12px;
}

a {
  color: $accent-color;

  &:hover {
    color: $accent-color-light;
  }
}

.footer {
  margin-top: 40px;

  .logo {
    margin-top: 15px;
  }
}

.accent {
  color: $accent-color;
}

.left {
  float: left;
}

.right {
  float: right;
}

.container {
  width: 960px;
}

.header {
  .logo {
    margin-top: 10px;
    margin-bottom: 5px;
    display: inline-block;
  }

  .navbar{
    margin-bottom: 10px;
    .navbar-inner .container {
      ul {
        margin-top: $logo-height - 15px;

        a {
          padding-bottom: 11px;
        }
      }
      .divider {
        float: left;
        color: $gray;
        margin-top: 10px;
        margin-left: 5px;
      }
    }
  }
}

.table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
  background-color: $bg-color-dark;
}

.map_container {
  width: $map-width;
  color: #000000;
  img {
    max-width: none;
  }

  .gmaps4rails_map {
    width: $map-width;
    height: $map-height;
  }

}

#gallery {
  -moz-box-shadow: 0 0 15px 5px #000000;;
  -webkit-box-shadow: 0 0 15px 5px #000000;;
  box-shadow: 0 0 15px 5px #000000;
}

#flag {
  position: absolute;
  top: $logo-height + 15px;
  left: 880px;
}

#pot {
  position: absolute;
  top: $logo-height + 150px;
  left: 780px;
}

#newsletter_tag {
  display: inline-block;
}

.form-horizontal .control-group > label {
  width: auto;
  text-align: left;
}

.form-horizontal .controls {
  margin-left: 60px;
}

abbr[title='required'] {
  font-size: 90%;
  text-transform: uppercase;
  color: $accent-color;
  border-bottom: none;
  cursor: default;
}

.control-group.error > label, .control-group.error .help-inline {
  vertical-align: baseline;
  color: $accent-color-light;
  font-style: italic;
}

.control-group label {
  display: inline-block;
}

.post {
  border-bottom: 1px dotted;
  .post_time {
    margin-right: 10px;
  }
}

